<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">userprofile</string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="date" tools:ignore="MissingTranslation">Date</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>


</resources>